--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         updateBannerVisibility();
       }
 
-      var buildUrl = "Build";
+      var buildUrl = "./Build";
       var loaderUrl = buildUrl + "/Blue Bird Web Release.loader.js";
       var config = {
         arguments: [],
